--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-manager-client",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://pranavi158.github.io/taskyy-frontend",  
+  "homepage": "/taskyy-frontend",  
   "dependencies": {
     "gh-pages": "^6.3.0",
     "react": "^18.0.0",
